# kinova_orocos_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
examples/example_debug/: deploy_kinova_driver.lua  low_level_position_component.lua  low_level_velocity_component.lua
examples/example_debug/reports/: plot_comparison_busy_waiting.py  plot_results.py  plot_results_orocos.py  plots_corrections.py
examples/example_high_level/: deploy_kinova_driver.lua  fsm_component.lua  fsm_seq_skills.lua  print_component.lua
examples/example_low_level_position/: deploy_kinova_driver.lua  low_level_position_component.lua
examples/example_low_level_velocity/: deploy_kinova_driver.lua  low_level_velocity_component.lua
include/kortex_api/: readme.txt
src/: CMakeLists.txt  kinova_gen3_component.cpp  kinova_gen3_component.hpp
